namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-app
  namespace: secure-app
  labels:
    pod-security.kubernetes.io/enforce: restricted
