deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: secure-app
spec:
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      securityContext:
        runAsNonRoot: true
        fsGroup: 2000
      containers:
        - name: nginx-test
          image: nginx:1.25-alpine
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          securityContext:
            runAsUser: 101
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: var-run
              mountPath: /var/run

      volumes:
        - name: tmp
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
        - name: var-run
          emptyDir: {}
