service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: secure-app
spec:
  type: ClusterIP
  selector:
    app: nginx-test
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
