networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-np
  namespace: secure-app
spec:
  podSelector:
    matchLabels:
      app: nginx-test
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}  # ← разрешить из ЛЮБОГО namespace
          podSelector:
            matchLabels:
              access: admin
      ports:
        - protocol: TCP
          port: 80
